fix: flex-wrap for answers

--- a/src/components/Games/Audiocall/Audioсall.pcss
+++ b/src/components/Games/Audiocall/Audioсall.pcss
@@ -11,7 +11,7 @@
 }
 
 .answerBtnContainer {
-  @apply flex justify-center my-5;
+  @apply flex justify-center flex-wrap my-5;
 }
 
 .answerBtn {
